<resources>
    <string name="app_name">Cavoid</string>
    <string name="title_activity_maps">Map</string>
    <string name="channel_name">Cavoider</string>
    <string name="channel_description">Cavoider notifications</string>
    <string name="search_term">search_term</string>
    <string name="btn_search">btn_search</string>
    <string name="alarm_off">alarm off</string>
    <string name="alarm_on">alarm on</string>
    <string name="turn_on_notification_for_rise_in_cases">Turn on notification for rise in cases</string>
    <string name="off">off</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="dashboardGreeting">Here are the covid statistics for...</string>
    <string name="_14_day_trend">14 Day Trend</string>
    <string name="date">12/12/20:</string>
    <string name="_14DayTrendTitle">14 Day Trend</string>
    <string name="trendlineTitle">Trendline</string>
    <string name="subscription_message">subscription message</string>
    <string name="total_casesTitle" />
    <string name="total_deathsTitle" />
    <string name="fips_code">FIPS Code</string>
    <string name="data_sources">Covid-19 Data Sources</string>
    <string name="data_sources_info">All Covid-19 data reported in the app on the county level is from
        The New York Times Covid-19 data set (https://github.com/nytimes/covid-19-data) which gathers data
        from state and local health agencies. Any data reported on the state level is from The COVID
        Tracking Project from The Atlantic (https://covidtracking.com) which gathers data from state
        and local health agencies, as well as from official press conferences held by state authorities.
        </string>
    <string name="app_overview">App Overview</string>
    <string name="app_overview_info">This app is designed to provide users with an overview of
        the Covid-19 community spread information in their area. This app uses a user\'s location to alert
        them of the Covid-19 status in areas they have visited or are currently visiting. This app
        is not designed as a contact tracing app and should not be used as such. This app is
        provided purely for informational purposes.</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="change_current_location_notification_settings">Change Current Location Notification Settings</string>
    <string name="current_location_notification_description">Notifies whenever entering an area with high community spread</string>
    <string name="community_spread_notification_description">Notifies whenever an area visited in the last 14 days has high community spread</string>
    <string name="location_settings">Location Settings</string>
    <string name="current_location_setting_description">Current Location Settings must be enabled for full functionality of this app. This app does not work without current location enabled. Current location data is only saved in the form of a FIPS code, which is a county identifier, locally on the device .</string>
    <string name="notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="past_locations">Past Locations</string>
    <string name="casesTextView"></string>
    <string name="deathsTitle" />
    <string name="change_community_spread_notification_settings">Change Community Spread Notification Settings</string>
    <string name="chartTitle">Average New Cases per 100,000 People</string>
    <string name="onboardingTitle" />
    <string name="onboardingDescription" />
    <string name="past_location_bottom_menu">Past Location</string>
    <string name="dashboard_bottom_menu">Main Dashboard</string>
    <string name="graph_bottom_menu">Graph</string>
    <string name="settings_menu">Settings</string>
    <string name="covid_data_information_menu">COVID-19 Data Information</string>
    <string name="information_bottom_menu">Information</string>
    <string name="covid_19_data_usage">Covid-19 Statistics</string>
    <string name="covid_data_stats">The data from the New York Times and The Atlantic was used in the calculations which generated the statistics displayed throughout the app. Data reported in this app may differ from other sources due to differences in reporting standards and reporting lag times.</string>
    <string name="new_cases">new_cases</string>
    <string name="estimated_average_cases">estimated average cases</string>
    <string name="new_deaths">New Deaths:</string>
    <string name="cases_per_100k">cases per 100k</string>
    <string name="total_cases">total_cases</string>
    <string name="total_deaths">total deaths</string>
    <string name="case_fatality">case_fatality</string>
</resources>