<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardBottomMenu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/dashboard_bottom_menu" />

    <item
        android:id="@+id/pastLocationBottomMenu"
        android:icon="@drawable/ic_baseline_pin_drop_24"
        android:title="@string/past_location_bottom_menu" />

    <item
        android:id="@+id/graphBottomMenu"
        android:icon="@drawable/ic_baseline_insert_chart_outlined_24"
        android:title="@string/graph_bottom_menu" > </item>

    <item
        android:id="@+id/generalInfoBottomMenu"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/information_bottom_menu" > </item>

</menu>

